--- a/ch3/react-sample/package.json
+++ b/ch3/react-sample/package.json
@@ -16,5 +16,15 @@
     "react-dom": "^16.7.0",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^2.1.0",
+    "style-loader": "^0.23.1"
   }
 }
