--- a/ch3/react-sample/package.json
+++ b/ch3/react-sample/package.json
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
+    "eslint": "^5.11.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "style-loader": "^0.23.1",
     "webpack-dev-server": "^3.1.14"
